# kding

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Messages.sh  README  TODO  create_pot.sh
debian/: changelog  control  copyright  rules
doc/: CMakeLists.txt
doc/de/: CMakeLists.txt  index.docbook
doc/en/: CMakeLists.txt  index.docbook
po/: CMakeLists.txt  kding.pot
po/cs/: CMakeLists.txt  kding.po
po/de/: CMakeLists.txt  kding.po
resources/: CMakeLists.txt  Readme.de-en.txt  kding.css  kding.desktop  kdingui.rc  welcome.html
resources/html/: CMakeLists.txt  box.magick  kding.css  nomatches.html  result.html  welcome.css  welcome.html
resources/icons/: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  application.h  backendsettings.cpp  backendsettings.h  backendsettingsbase.ui  generalsettings.cpp  generalsettings.h  generalsettingsbase.ui  htmlgenerator.cpp  htmlgenerator.h  kding.kcfg  main.cpp  mainwindow.cpp  mainwindow.h  resultlist.cpp  resultlist.h  searchbackendfactory.cpp  searchbackendfactory.h  searchengine.cpp  searchengine.h  settings.kcfgc  systemtrayicon.cpp  systemtrayicon.h  translationwidget.cpp  translationwidget.h  translationwidgetbase.ui
